# bugtracker-v3

./: README.md
backend/: .gitignore  Spacefile  main.py  pyproject.toml  requirements.txt
backend/backend/: __init__.py  config.py  main.py  models.py  permissions.py  priority.py  requirements.txt  roles.py  status.py
backend/backend/auth/: backend.py  models.py  oauth2.py  password_hash.py  routes.py  strategy.py  transport.py  utils.py
backend/backend/bugs/: .routes.py.swp  routes.py  schemas.py  utils.py
backend/backend/comments/: routes.py  schemas.py  utils.py
backend/backend/files/: routes.py  schemas.py  utils.py
backend/backend/project_members/: routes.py  schemas.py  utils.py
backend/backend/projects/: routes.py  schemas.py  utils.py
backend/backend/users/: routes.py  schemas.py  user_manager.py  utils.py
backend/tests/: conftest.py
backend/tests/test_models/: test_user.py
bugtracker-app/: Spacefile  pyproject.toml  requirements.txt  rxconfig.py
bugtracker-app/alembic/versions/: 4018eaf87c09_.py  b51fb55527fb_.py  c1fe6251520a_.py
bugtracker-app/assets/fonts/: tenor_sans.css
bugtracker-app/bugtracker_app/: bugtracker_app.py  examples.py
bugtracker-app/bugtracker_app/enumerations/: __init__.py  action.py  changes.py  priority.py  role.py  status.py  ticket_type.py
frontend/: endpoints.js  package-lock.json  package.json  pyproject.toml  rxconfig.py
frontend/frontend/: frontend.py
frontend/frontend/components/: snippets  (+8 more)
frontend/pages/: _app.js  _document.js  _error.js  index.js
frontend/src/: ProTip.js  statuses.js  theme.js
(+105 files in other folders)
