[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Ademola Balogun <balotech514@gmail.com>"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.99.1"
fastapi-users = {extras = ["beanie", "oauth"], version = "^12.0.0"}
argon2-cffi = "^21.3.0"
uvicorn = "^0.22.0"
python-dotenv = "^1.0.0"
pytest = "^7.4.0"
anyio = "^3.7.0"
pytest-asyncio = "^0.21.0"
httpx = "0.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
