[tool.poetry]
name = "bugtracker-app"
version = "0.1.0"
description = ""
authors = ["Ademola Balogun <balotech514@gmail.com>"]
readme = "README.md"
packages = [{include = "bugtracker_app"}]

[tool.poetry.dependencies]
python = "^3.10"
reflex = "^0.2.3"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
