[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["Ademola Balogun <balotech514@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
reflex = "^0.2.3"
urllib3 = "^2.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
